--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
-    "stripe": "^14.10.0"
+    "nodemailer": "^6.9.7",
+    "stripe": "^14.10.0",
+    "uuid": "^9.0.1",
+    "validator": "^13.11.0"
   }
 }
