--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "nodemailer": "^6.9.7",
+    "path": "^0.12.7",
     "stripe": "^14.10.0",
     "uuid": "^9.0.1",
     "validator": "^13.11.0"
