--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # dependencies
 /client/node_modules
 /server/node_modules
-/admin-bro-localhost/node_modules
+/admin-bro-localhost
 /.pnp
 .pnp.js
 
@@ -11,14 +11,14 @@
 /coverage
 
 # production
-/build
+# /build
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# .env.local
+# .env.development.local
+# .env.test.local
+# .env.production.local
 
 npm-debug.log*
 yarn-debug.log*
