--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 JWT_SECRET=zzzzzzzzzzzzzz
-MONGO=mongodb://127.0.0.1/ECommerceDelivery
+MONGO=MONGO=mongodb+srv://nathanieljbrunnett:GRzFzHcT1sjE3BlS@ecommercecluster.zq2smzn.mongodb.net/
 NODEMAILER_EMAIL=nate29530@gmail.com
 NODEMAILER_PASSWORD=tuyg xvjm hwyh jtwu
 
