--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,6 @@
 JWT_SECRET=zzzzzzzzzzzzzz
 MONGO=mongodb+srv://nathanieljbrunnett:GRzFzHcT1sjE3BlS@ecommercecluster.zq2smzn.mongodb.net/
+#MONGO=mongodb://localhost:27017/ECommerceDelivery
 NODEMAILER_EMAIL=nate29530@gmail.com
 NODEMAILER_PASSWORD=tuyg xvjm hwyh jtwu
 
