--- a/server/.env
+++ b/server/.env
@@ -11,7 +11,7 @@ STRIPE_SECRET_KEY=sk_test_51OOtwEFXIpFohAHIVJzc4kV3UNqxYZTW4qObmEr2ZlEqv1AnAqXn0
 STRIPE_WEBHOOK_SECRET=whsec_1234
 STATIC_DIR='../client'
 # Checkout settings 
-DOMAIN=https://lonely-dog-gaiters.cyclic.app/
+DOMAIN=https://lonely-dog-gaiters.cyclic.app
 #DOMAIN=http://localhost:3000
 BASE_PRICE=666
 CURRENCY=eur
